--- a/index.html
+++ b/index.html
@@ -1,1 +1,83 @@
-start to end of header
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="author" content="Amin Ansari Mehr">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="assets/CSS/Style.css">
+    <title>Enfold Parallax</title>
+</head>
+
+<body>
+    <div class="container">
+        <!--------------------- Header --------------------->
+        <header>
+            <!---------------------- Nav --------------------->
+            <nav>
+                <!---------------- Enfold Logo ----------------->
+                <div class="Enfold_Logo">
+                    <a href="#">
+                        <img src="assets/Images/logo_only.png" alt="enfold_logo">
+                    </a>
+                </div>
+                <div class="links">
+                    <!------------------ Menu ----------------->
+                    <div class="menu">
+                        <ul>
+                            <li><a href="">Home</a></li>
+                            <li><a href="">Services</a></li>
+                            <li><a href="">About Us</a></li>
+                            <li><a href="">Portfolio</a></li>
+                            <li><a href="">Contact</a></li>
+                        </ul>
+                    </div>
+                    <!-------------- Social Media -------------->
+                    <div class="Social_Media">
+                        <a href="#">
+                            <i class="fa-brands fa-twitter fa-1xl"></i>
+                        </a>
+
+                        <a href="#">
+                            <i class="fa-brands fa-dribbble fa-1xl"></i>
+                        </a>
+
+                        <a href="#">
+                            <i class="fa-brands fa-facebook-f fa-1xl"></i>
+                        </a>
+                    </div>
+                </div>
+            </nav>
+            <!--------------- Header Content --------------->
+            <div class="Header_Content">
+
+                <div class="Main_Enfold">
+                    <img src="assets/Images/main-enfold.png" alt="main_enfold_image">
+                </div>
+
+                <div class="Main_Parallax">
+                    <img src="assets/Images/main-parallax.png" alt="main-parallax_image">
+                </div>
+
+            </div>
+        </header>
+        <!---------------- End Of Header ----------------->
+
+
+        <!--------------------- Main --------------------->
+        <main>
+
+        </main>
+        <!------------------End Of Main ------------------>
+
+
+
+        <footer>
+
+        </footer>
+
+    </div>
+</body>
+
+</html>
