--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="author" content="Amin Ansari Mehr">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="assets/CSS/Style.css">
+    <link rel="stylesheet" href="assets/CSS/style.css">
     <title>Enfold Parallax</title>
 </head>
 
